Feat/complex analyze (#19)
* feat: multi frame analysis

* fix: timeframe for fresh data

* chore: signal log more readable

* fix: sort signals by interval